--- a/footer/footer.less
+++ b/footer/footer.less
@@ -4,7 +4,7 @@
     
     .social-section {
         .flex-mixin(row);
-        margin: 3.0rem auto;
+        margin: 2.0rem auto;
         width: 80%;
         .social {
             border: 2px solid #6200EE;
@@ -25,7 +25,7 @@
         h1 {
             text-align: center;
             font-size: 2.0rem;
-            padding-top: 3.0rem;
+            padding: 1.0rem auto;
             color: white;
         }
 
@@ -35,9 +35,17 @@
         
         .stores {
             .flex-mixin(row);
-            justify-content: space-evenly;
+            justify-content: center;
+
+            height: 2%;
             img {
                 width: 20%;
+            }
+            .store {
+                height: 2%;
+                width: 10%;
+                margin: 0 2.0rem;
+                padding-bottom: 1.5rem;
             }
         }
     }
